--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <main>
         <section id="home">
             <h2>Explore the Beauty of Kerala</h2>
-            <img src="./images/kerala-tourism.jpg" alt="Kerala Scenery" width="100%" height="auto" /><br />
+            <img src="./images/kerala-tourism.jpg" alt="Kerala Scenery" width="100%" height="auto" /><br>
             <p>
                 Experience the serene backwaters, lush greenery, and vibrant culture of Kerala.
             </p>
-            <hr />
+            <hr>
         </section>
 
         <section id="about">
@@ -142,25 +142,26 @@
                     
                     <label for="name">Name:</label><br />
                     <input type="text" id="name" name="name" required pattern="[A-Za-z\s]+"
-                        title="Please enter a valid name using letters and spaces only." /><br /><br />
+                        title="Please enter a valid name using letters and spaces only." /><br><br>
 
                     <label for="email">Email:</label><br />
                     <input type="email" id="email" name="email" required pattern="^[^\s@]+@[^\s@]+\.[^\s@]+$"
-                        title="Please enter a valid email address." /><br /><br />
+                        title="Please enter a valid email address." /><br><br>
 
                     <label for="phone">Phone Number:</label><br />
                     <input type="tel" id="phone" name="phone" required pattern="\d{10}"
-                        title="Please enter a 10-digit phone number without spaces or special characters." /><br /><br />
+                        title="Please enter a 10-digit phone number without spaces or special characters." /><br><br>
 
                     <label for="message">Message:</label><br />
-                    <textarea id="message" name="message" required></textarea><br /><br />
+                    <textarea id="message" name="message" required></textarea><br><br>
 
                     <button type="submit">Submit</button>
                 </fieldset>
             </form>
         </section>
+        <hr>
     </main>
-
+    
     <footer>
         <p>&copy; 2024 Kerala Tourism. All rights reserved.</p>
         <a href="https://www.facebook.com" aria-label="Facebook"><img src="./images/icons/facebook.png" alt="Facebook" width="20" height="20" /></a>
