--- a/index.html
+++ b/index.html
@@ -187,8 +187,17 @@
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Kerala Tourism. All rights reserved.</p>
+        <p>
+            <img src="./images/icons/mail.png" alt="Email" width="20" height="20" /> 
+            Email: <a href="mailto:info@keralatourism.com">info@keralatourism.com</a>
+        </p>
+        <p>
+            <img src="./images/icons/telephone.png" alt="Phone" width="20" height="20" /> 
+            Phone: +91-123-456-7890
+        </p>
         <!-- Social Media Links -->
         <a href="https://www.facebook.com" aria-label="Facebook"><img src="./images/icons/facebook.png" alt="Facebook" width="20" height="20" /></a>
+        <a href="https://www.whatsapp.com" aria-label="Whatsapp"><img src="./images/icons/whatsapp.png" alt="Whatsapp" width="20" height="20" /></a>
         <a href="https://www.twitter.com" aria-label="Twitter"><img src="./images/icons/twitter.png" alt="Twitter" width="20" height="20" /></a>
         <a href="https://www.instagram.com" aria-label="Instagram"><img src="./images/icons/instagram.png" alt="Instagram" width="20" height="20" /></a>
     </footer>
